Se agregado nuevo endpoint profile
